--- a/index.html
+++ b/index.html
@@ -1321,8 +1321,8 @@ body {
         <div class="api-key-label">🤖 Modelo de IA</div>
         <select class="model-select" id="modelSelect">
           <option value="gemini-2.0-flash">Gemini 2.0 Flash (Rápido · Gratuito ⭐)</option>
-          <option value="gemini-1.5-flash">Gemini 1.5 Flash (Gratuito)</option>
-          <option value="gemini-1.5-pro">Gemini 1.5 Pro (Avançado)</option>
+          <option value="gemini-2.0-flash">Gemini 2.0 Flash (Rápido · Gratuito ⭐)</option>
+          <option value="gemini-2.0-flash">Gemini 2.0 Flash (Rápido · Gratuito ⭐)</option>
           <option value="gemini-2.0-flash-thinking-exp">Gemini 2.0 Thinking (Experimental)</option>
         </select>
       </div>
