Fix: Atualização chave gemini v2

--- a/index (2).html
+++ b/index (2).html
@@ -1321,8 +1321,8 @@ body {
         <div class="api-key-label">🤖 Modelo de IA</div>
         <select class="model-select" id="modelSelect">
           <option value="gemini-2.0-flash">Gemini 2.0 Flash (Rápido · Gratuito ⭐)</option>
-          <option value="gemini-1.5-flash">Gemini 1.5 Flash (Gratuito)</option>
-          <option value="gemini-1.5-pro">Gemini 1.5 Pro (Avançado)</option>
+          <option value="gemini-2.0-flash">Gemini 2.0 Flash (Rápido · Gratuito ⭐)</option>
+          <option value="gemini-2.0-flash">Gemini 2.0 Flash (Rápido · Gratuito ⭐)</option>
           <option value="gemini-2.0-flash-thinking-exp">Gemini 2.0 Thinking (Experimental)</option>
         </select>
       </div>
@@ -1804,7 +1804,7 @@ function hideLoader() {
 // ============================================================
 // GEMINI API KEY (Google AI Studio — Gratuito)
 // ============================================================
-const GEMINI_API_KEY = 'AIzaSyDWJ01TvXv5Tt8WqAtZy2gRyghPPMmX4g0';
+const GEMINI_API_KEY = 'AIzaSyDBxgZLXecfS-eXux2u596hyplpE0Q3pL8';
 
 async function callAI(systemPrompt, userPrompt, json = false) {
   // Use saved key if user provided one, otherwise use built-in key
