--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@ body {
    SUPABASE CONFIG
    ============================================================ */
 const SUPABASE_URL = 'https://anbbwhxilzpwxilhpwva.supabase.co';
-const SUPABASE_ANON_KEY = 'COLE_SUA_CHAVE_ANON_AQUI'; // ← Substitua pela sua chave anon/public
+const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFuYmJ3aHhpbHpwd3hpbGhwd3ZhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzIyMTQ2ODQsImV4cCI6MjA4Nzc5MDY4NH0.mBP1OxNtAZjvXNxWYaEORWkpCXJzlZpFvlAe2VWJwa0'; // ← Substitua pela sua chave anon/public
 
 const sb = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
